--- a/PythonForDataAnalysis2nd.ipynb
+++ b/PythonForDataAnalysis2nd.ipynb
@@ -5172,10 +5172,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Sum of array elements over a given axis.\n",
+      "\n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    a : array_like\n",
+      "        Elements to sum.\n",
+      "    axis : None or int or tuple of ints, optional\n",
+      "        Axis or axes along which a sum is performed.  The default,\n",
+      "        axis=None, will sum all of the elements of the input array.  If\n",
+      "        axis is negative it counts from the last to the first axis.\n",
+      "\n",
+      "        .. versionadded:: 1.7.0\n",
+      "\n",
+      "        If axis is a tuple of ints, a sum is performed on all of the axes\n",
+      "        specified in the tuple instead of a single axis or all the axes as\n",
+      "        before.\n",
+      "    dtype : dtype, optional\n",
+      "        The type of the returned array and of the accumulator in which the\n",
+      "        elements are summed.  The dtype of `a` is used by default unless `a`\n",
+      "        has an integer dtype of less precision than the default platform\n",
+      "        integer.  In that case, if `a` is signed then the platform integer\n",
+      "        is used while if `a` is unsigned then an unsigned integer of the\n",
+      "        same precision as the platform integer is used.\n",
+      "    out : ndarray, optional\n",
+      "        Alternative output array in which to place the result. It must have\n",
+      "        the same shape as the expected output, but the type of the output\n",
+      "        values will be cast if necessary.\n",
+      "    keepdims : bool, optional\n",
+      "        If this is set to True, the axes which are reduced are left\n",
+      "        in the result as dimensions with size one. With this option,\n",
+      "        the result will broadcast correctly against the input array.\n",
+      "\n",
+      "        If the default value is passed, then `keepdims` will not be\n",
+      "        passed through to the `sum` method of sub-classes of\n",
+      "        `ndarray`, however any non-default value will be.  If the\n",
+      "        sub-classes `sum` method does not implement `keepdims` any\n",
+      "        exceptions will be raised.\n",
+      "\n",
+      "    Returns\n",
+      "    -------\n",
+      "    sum_along_axis : ndarray\n",
+      "        An array with the same shape as `a`, with the specified\n",
+      "        axis removed.   If `a` is a 0-d array, or if `axis` is None, a scalar\n",
+      "        is returned.  If an output array is specified, a reference to\n",
+      "        `out` is returned.\n",
+      "\n",
+      "    See Also\n",
+      "    --------\n",
+      "    ndarray.sum : Equivalent method.\n",
+      "\n",
+      "    cumsum : Cumulative sum of array elements.\n",
+      "\n",
+      "    trapz : Integration of array values using the composite trapezoidal rule.\n",
+      "\n",
+      "    mean, average\n",
+      "\n",
+      "    Notes\n",
+      "    -----\n",
+      "    Arithmetic is modular when using integer types, and no error is\n",
+      "    raised on overflow.\n",
+      "\n",
+      "    The sum of an empty array is the neutral element 0:\n",
+      "\n",
+      "    >>> np.sum([])\n",
+      "    0.0\n",
+      "\n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> np.sum([0.5, 1.5])\n",
+      "    2.0\n",
+      "    >>> np.sum([0.5, 0.7, 0.2, 1.5], dtype=np.int32)\n",
+      "    1\n",
+      "    >>> np.sum([[0, 1], [0, 5]])\n",
+      "    6\n",
+      "    >>> np.sum([[0, 1], [0, 5]], axis=0)\n",
+      "    array([0, 6])\n",
+      "    >>> np.sum([[0, 1], [0, 5]], axis=1)\n",
+      "    array([1, 5])\n",
+      "\n",
+      "    If the accumulator is too small, overflow occurs:\n",
+      "\n",
+      "    >>> np.ones(128, dtype=np.int8).sum(dtype=np.int8)\n",
+      "    -128\n",
+      "\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "pd."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class A:\n",
+    "    level=1\n",
+    "    def __init__(self,level):\n",
+    "        sel.level=level\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def get(cls):\n",
+    "        return cls.level\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def hoge(v):\n",
+    "        return v * 2\n",
+    "    \n",
+    "    def get_as_instance(self):\n",
+    "        return self.level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = A(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.get()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.get_as_instance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.hoge(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.level"
+   ]
   }
  ],
  "metadata": {
