gcloudライブらいについて追加(WIP)

--- a/1_Data Science on the Google Cloud Platform.ipynb
+++ b/1_Data Science on the Google Cloud Platform.ipynb
@@ -2021,11 +2021,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## google-cloudライブラリを使用する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: GOOGLE_APPLICATION_CREDENTIALS=\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env  GOOGLE_APPLICATION_CREDENTIALS=/Users/hasehiro/data-science-on-the-gcp-da1e9f12fed5.json\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ASIA'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import google.cloud.storage as storae\n",
+    "# バケットの操作\n",
+    "storage_client=storage.Client()\n",
+    "bucket=storage_client.get_bucket('csv-data-bucket')\n",
+    "bucket.location"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## cloud sqlの起動"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# sqlインスタンスの生成\n",
+    "# gcloud sql instance create flights --tier=db-nl-standard-l --activation-policy=ALWAYS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # sqlインスタンスの生成\n",
+    "from googleapiclient import discovery\n",
+    "%pdoc  discovery.build\n",
+    "# sql=discovery.build('sqladmin', 'v1beta4', http=http)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bash: line 2: wget: command not found\n",
+      "bash: line 2: gcloud: command not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "# ipアドレスを登録する\n",
+    "gcloud sql instances patch flights \\\n",
+    "    --authorized-networks $(wget -qO - http://ipecho.net/plain)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%bash\n",
+    "# 現在動いているインスタンスのエンドポイントを見つけ、dumpを流し込む\n",
+    "MYSQLIP=$(gcloud sql instances describe \\\n",
+    "      flights --format=\"value(ipAddresses.ipAddress)\")\n",
+    "mysql --host=$MYSQLIP --user=root \\\n",
+    "      --password --verbose < create_table.sql"
+   ]
   }
  ],
  "metadata": {
