データの前処理とアヤメデータについて追加

--- a/Python_Real-World_Data_Science.ipynb
+++ b/Python_Real-World_Data_Science.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## generator "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -88,6 +95,187 @@
    ],
    "source": [
     "print(next(current))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Coroutines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tally():\n",
+    "    score=0\n",
+    "    while True:\n",
+    "        increment=yield score\n",
+    "        print(f'increment is{increment}')\n",
+    "        score+=increment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=tally()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# scoreの値が評価される\n",
+    "next(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "increment is2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# increment=2となりscore+=incremenctが実行される\n",
+    "a.send(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "increment is6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.send(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 外部から逐次、保存したい内容を送信\n",
+    "def out_put():\n",
+    "    while True:\n",
+    "        color,name=yield \n",
+    "        print(f'color is {color},name is {name}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results=write_results('./output.csv')\n",
+    "# yieldの右辺(今回だとなにもない)まで評価\n",
+    "next(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "color is (0, 0, 0),name is 100\n",
+      "1\n",
+      "color is (1, 1, 1),name is 101\n",
+      "2\n",
+      "color is (2, 4, 8),name is 102\n",
+      "3\n",
+      "color is (3, 9, 27),name is 103\n",
+      "4\n",
+      "color is (4, 16, 64),name is 104\n",
+      "5\n",
+      "color is (5, 25, 125),name is 105\n",
+      "6\n",
+      "color is (6, 36, 216),name is 106\n",
+      "7\n",
+      "color is (7, 49, 343),name is 107\n",
+      "8\n",
+      "color is (8, 64, 512),name is 108\n",
+      "9\n",
+      "color is (9, 81, 729),name is 109\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i)\n",
+    "    # yieldの左側に値を送る\n",
+    "    results.send(((i,i**2,i**3),i+100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cat output.csv"
    ]
   },
   {
