--- a/Feature Engineering for ML_5.ipynb
+++ b/Feature Engineering for ML_5.ipynb
@@ -467,7 +467,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## カテゴリ数が非常に大きな場合、どのようにすればよいか"
+    "## カテゴリ数が非常に大きな場合、どのようにすればよいか\n",
+    "- カテゴリ数が多いと、スパースな行列になる。\n",
+    "- これをいかに密な行列に変換するか"
    ]
   },
   {
@@ -475,6 +477,407 @@
    "metadata": {},
    "source": [
     "### Feature Hashing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>cool</th>\n",
+       "      <th>date</th>\n",
+       "      <th>funny</th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>text</th>\n",
+       "      <th>useful</th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0W4lkclzZThpx3V65bVgig</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-05-28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>v0i_UHJMo_hPBq9bxWvW4w</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Love the staff, love the meat, love the place....</td>\n",
+       "      <td>0</td>\n",
+       "      <td>bv2nCi5Qv5vroFiqKGopiw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AEx2SYEUJmTxVVB18LlCwA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-05-28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>vkVSCC7xljjrAI4UGfnKEQ</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Super simple place but amazing nonetheless. It...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>bv2nCi5Qv5vroFiqKGopiw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>VR6GpWIda3SfvPC-lg9H3w</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-05-28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>n6QzIUObkYshz4dz2QRJTw</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Small unassuming place that changes their menu...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>bv2nCi5Qv5vroFiqKGopiw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CKC0-MOWMqoeWf6s-szl8g</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-05-28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MV3CcKScW05u5LVfF6ok0g</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lester's is located in a beautiful neighborhoo...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>bv2nCi5Qv5vroFiqKGopiw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ACFtxLv8pGrrxMm6EgjreA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-05-28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IXvOzsEMYtiJI0CARmj77Q</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Love coming here. Yes the place always needs t...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>bv2nCi5Qv5vroFiqKGopiw</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              business_id  cool        date  funny               review_id  \\\n",
+       "0  0W4lkclzZThpx3V65bVgig     0  2016-05-28      0  v0i_UHJMo_hPBq9bxWvW4w   \n",
+       "1  AEx2SYEUJmTxVVB18LlCwA     0  2016-05-28      0  vkVSCC7xljjrAI4UGfnKEQ   \n",
+       "2  VR6GpWIda3SfvPC-lg9H3w     0  2016-05-28      0  n6QzIUObkYshz4dz2QRJTw   \n",
+       "3  CKC0-MOWMqoeWf6s-szl8g     0  2016-05-28      0  MV3CcKScW05u5LVfF6ok0g   \n",
+       "4  ACFtxLv8pGrrxMm6EgjreA     0  2016-05-28      0  IXvOzsEMYtiJI0CARmj77Q   \n",
+       "\n",
+       "   stars                                               text  useful  \\\n",
+       "0      5  Love the staff, love the meat, love the place....       0   \n",
+       "1      5  Super simple place but amazing nonetheless. It...       0   \n",
+       "2      5  Small unassuming place that changes their menu...       0   \n",
+       "3      5  Lester's is located in a beautiful neighborhoo...       0   \n",
+       "4      4  Love coming here. Yes the place always needs t...       0   \n",
+       "\n",
+       "                  user_id  \n",
+       "0  bv2nCi5Qv5vroFiqKGopiw  \n",
+       "1  bv2nCi5Qv5vroFiqKGopiw  \n",
+       "2  bv2nCi5Qv5vroFiqKGopiw  \n",
+       "3  bv2nCi5Qv5vroFiqKGopiw  \n",
+       "4  bv2nCi5Qv5vroFiqKGopiw  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# feature hashingでどれぐらい容量が軽減されるのかを確認する\n",
+    "\n",
+    "# yelpのユーザーデータの最初の5000行を読み込む\n",
+    "import json\n",
+    "\n",
+    "jsons=[]\n",
+    "with open('./dataset/yelp_review.json') as file:\n",
+    "     for i in range(5000):\n",
+    "            jsons.append(json.loads(file.readline()))\n",
+    "            \n",
+    "yelp_revew_df=pd.DataFrame(jsons)\n",
+    "\n",
+    "yelp_revew_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4477\n",
+      "(5000, 4477)\n",
+      "original data size is 395104\n",
+      "hashed data size is 56\n"
+     ]
+    }
+   ],
+   "source": [
+    "# business_idの数\n",
+    "m=len(yelp_revew_df.business_id.unique())\n",
+    "\n",
+    "from sklearn.feature_extraction import FeatureHasher\n",
+    "\n",
+    "h=FeatureHasher(n_features=m,input_type='string')\n",
+    "f=h.transform(yelp_revew_df.business_id)\n",
+    "\n",
+    "print(m)\n",
+    "print(np.shape(f.toarray()))\n",
+    "f_arr=f.toarray()\n",
+    "\n",
+    "\n",
+    "from sys import getsizeof\n",
+    "\n",
+    "print('original data size is',getsizeof(yelp_revew_df.business_id))\n",
+    "print('hashed data size is',getsizeof(f))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bin Counting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>C1</th>\n",
+       "      <th>banner_pos</th>\n",
+       "      <th>site_id</th>\n",
+       "      <th>site_domain</th>\n",
+       "      <th>site_category</th>\n",
+       "      <th>app_id</th>\n",
+       "      <th>app_domain</th>\n",
+       "      <th>app_category</th>\n",
+       "      <th>...</th>\n",
+       "      <th>device_type</th>\n",
+       "      <th>device_conn_type</th>\n",
+       "      <th>C14</th>\n",
+       "      <th>C15</th>\n",
+       "      <th>C16</th>\n",
+       "      <th>C17</th>\n",
+       "      <th>C18</th>\n",
+       "      <th>C19</th>\n",
+       "      <th>C20</th>\n",
+       "      <th>C21</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.000017e+19</td>\n",
+       "      <td>14103100</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>0</td>\n",
+       "      <td>235ba823</td>\n",
+       "      <td>f6ebf28e</td>\n",
+       "      <td>f028772b</td>\n",
+       "      <td>ecad2386</td>\n",
+       "      <td>7801e8d9</td>\n",
+       "      <td>07d7df22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8330</td>\n",
+       "      <td>320</td>\n",
+       "      <td>50</td>\n",
+       "      <td>761</td>\n",
+       "      <td>3</td>\n",
+       "      <td>175</td>\n",
+       "      <td>100075</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000018e+19</td>\n",
+       "      <td>14103100</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1fbe01fe</td>\n",
+       "      <td>f3845767</td>\n",
+       "      <td>28905ebd</td>\n",
+       "      <td>ecad2386</td>\n",
+       "      <td>7801e8d9</td>\n",
+       "      <td>07d7df22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22676</td>\n",
+       "      <td>320</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2616</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>100083</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.000055e+19</td>\n",
+       "      <td>14103100</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1fbe01fe</td>\n",
+       "      <td>f3845767</td>\n",
+       "      <td>28905ebd</td>\n",
+       "      <td>ecad2386</td>\n",
+       "      <td>7801e8d9</td>\n",
+       "      <td>07d7df22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22676</td>\n",
+       "      <td>320</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2616</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>100083</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.000109e+19</td>\n",
+       "      <td>14103100</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>0</td>\n",
+       "      <td>85f751fd</td>\n",
+       "      <td>c4e18dd6</td>\n",
+       "      <td>50e219e0</td>\n",
+       "      <td>51cedd4e</td>\n",
+       "      <td>aefc06bd</td>\n",
+       "      <td>0f2161f8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18648</td>\n",
+       "      <td>320</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1092</td>\n",
+       "      <td>3</td>\n",
+       "      <td>809</td>\n",
+       "      <td>100156</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.000138e+19</td>\n",
+       "      <td>14103100</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>0</td>\n",
+       "      <td>85f751fd</td>\n",
+       "      <td>c4e18dd6</td>\n",
+       "      <td>50e219e0</td>\n",
+       "      <td>9c13b419</td>\n",
+       "      <td>2347f47a</td>\n",
+       "      <td>f95efa07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23160</td>\n",
+       "      <td>320</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2667</td>\n",
+       "      <td>0</td>\n",
+       "      <td>47</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             id      hour    C1  banner_pos   site_id site_domain  \\\n",
+       "0  1.000017e+19  14103100  1005           0  235ba823    f6ebf28e   \n",
+       "1  1.000018e+19  14103100  1005           0  1fbe01fe    f3845767   \n",
+       "2  1.000055e+19  14103100  1005           0  1fbe01fe    f3845767   \n",
+       "3  1.000109e+19  14103100  1005           0  85f751fd    c4e18dd6   \n",
+       "4  1.000138e+19  14103100  1005           0  85f751fd    c4e18dd6   \n",
+       "\n",
+       "  site_category    app_id app_domain app_category ...  device_type  \\\n",
+       "0      f028772b  ecad2386   7801e8d9     07d7df22 ...            1   \n",
+       "1      28905ebd  ecad2386   7801e8d9     07d7df22 ...            1   \n",
+       "2      28905ebd  ecad2386   7801e8d9     07d7df22 ...            1   \n",
+       "3      50e219e0  51cedd4e   aefc06bd     0f2161f8 ...            1   \n",
+       "4      50e219e0  9c13b419   2347f47a     f95efa07 ...            1   \n",
+       "\n",
+       "  device_conn_type    C14  C15  C16   C17  C18  C19     C20  C21  \n",
+       "0                0   8330  320   50   761    3  175  100075   23  \n",
+       "1                0  22676  320   50  2616    0   35  100083   51  \n",
+       "2                0  22676  320   50  2616    0   35  100083   51  \n",
+       "3                0  18648  320   50  1092    3  809  100156   61  \n",
+       "4                0  23160  320   50  2667    0   47      -1  221  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ctr予測のデータをbin countingで圧縮する\n",
+    "ctr_df=pd.read_csv('./dataset/ctr_test.csv')\n",
+    "\n",
+    "ctr_df.head()"
    ]
   },
   {
