--- a/Chapter 6. Handling Text.ipynb
+++ b/Chapter 6. Handling Text.ipynb
@@ -261,15 +261,268 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Encoding Text as a Bag of Words"
+    "# Bag of Wordsによるベクトル化"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "scipy.sparse.csr.csr_matrix"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 特徴量ベクトル化\n",
+    "import  numpy as np\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "text_data = np.array(['I love Brazil. Brazil!',\n",
+    "                      'Sweden is best',\n",
+    "                      'Germany beats both'])\n",
+    "\n",
+    "count=CountVectorizer()\n",
+    "\n",
+    "bag_of_words=count.fit_transform(text_data)\n",
+    "\n",
+    "type(bag_of_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 2, 0, 0, 1, 0],\n",
+       "       [0, 1, 0, 0, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bag_of_words.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>beats</th>\n",
+       "      <th>best</th>\n",
+       "      <th>both</th>\n",
+       "      <th>brazil</th>\n",
+       "      <th>germany</th>\n",
+       "      <th>is</th>\n",
+       "      <th>love</th>\n",
+       "      <th>sweden</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   beats  best  both  brazil  germany  is  love  sweden\n",
+       "0      0     0     0       2        0   0     1       0\n",
+       "1      0     1     0       0        0   1     0       1\n",
+       "2      1     0     1       0        1   0     0       0"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "col=count.get_feature_names()\n",
+    "\n",
+    "pd.DataFrame(bag_of_words.toarray(),columns=col)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# wordに重みをつけるて特徴ベクトル化(tf-idf変換)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "頻度が高い単語の寄与が少なくなる"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>love</th>\n",
+       "      <th>brazil</th>\n",
+       "      <th>sweden</th>\n",
+       "      <th>is</th>\n",
+       "      <th>best</th>\n",
+       "      <th>germany</th>\n",
+       "      <th>beats</th>\n",
+       "      <th>both</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.894427</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.447214</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.57735</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.57735</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.57735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.57735</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.57735</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.57735</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      love   brazil   sweden        is     best  germany     beats     both\n",
+       "0  0.00000  0.00000  0.00000  0.894427  0.00000  0.00000  0.447214  0.00000\n",
+       "1  0.00000  0.57735  0.00000  0.000000  0.00000  0.57735  0.000000  0.57735\n",
+       "2  0.57735  0.00000  0.57735  0.000000  0.57735  0.00000  0.000000  0.00000"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "\n",
+    "tfidf=TfidfVectorizer()\n",
+    "\n",
+    "feature_matrix=tfidf.fit_transform(text_data)\n",
+    "\n",
+    "pd.DataFrame(feature_matrix.toarray(),columns=tfidf.vocabulary_)"
+   ]
   }
  ],
  "metadata": {
@@ -301,7 +554,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
