--- a/CH3.ipynb
+++ b/CH3.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# JapaneseCorpusReaderのテスト"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,55 +18,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "jap=JapaneseCorpusReader('/Users/hiroaki/Develop/project/DIUnit/pycoon/dataset/corpas',encoding='shift_jis')"
+    "jap=JapaneseCorpusReader(root='./dataset/corpas',encoding='shift_jis')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DOC_PATTERN = r'kokoro.txt'\n",
-    "data=jap.sents(DOC_PATTERN)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "words=jap.words(DOC_PATTERN)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "nltk.corpus.reader.util.StreamBackedCorpusView"
+       "['kokoro.txt']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(words)"
+    "jap.fileids()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "data=jap.sents()[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['私\\t名詞,代名詞,一般,*,*,*,私,ワタシ,ワタシ',\n",
+       " '《\\t記号,括弧開,*,*,*,*,《,《,《',\n",
+       " 'わたくし\\t名詞,代名詞,一般,*,*,*,わたくし,ワタクシ,ワタクシ',\n",
+       " '》\\t記号,括弧閉,*,*,*,*,》,》,》',\n",
+       " 'は\\t助詞,係助詞,*,*,*,*,は,ハ,ワ',\n",
+       " 'その\\t連体詞,*,*,*,*,*,その,ソノ,ソノ',\n",
+       " '人\\t名詞,一般,*,*,*,*,人,ヒト,ヒト',\n",
+       " 'を\\t助詞,格助詞,一般,*,*,*,を,ヲ,ヲ',\n",
+       " '常に\\t副詞,一般,*,*,*,*,常に,ツネニ,ツネニ',\n",
+       " '先生\\t名詞,一般,*,*,*,*,先生,センセイ,センセイ',\n",
+       " 'と\\t助詞,格助詞,一般,*,*,*,と,ト,ト',\n",
+       " '呼ん\\t動詞,自立,*,*,五段・バ行,連用タ接続,呼ぶ,ヨン,ヨン',\n",
+       " 'で\\t助詞,接続助詞,*,*,*,*,で,デ,デ',\n",
+       " 'い\\t動詞,非自立,*,*,一段,連用形,いる,イ,イ',\n",
+       " 'た\\t助動詞,*,*,*,特殊・タ,基本形,た,タ,タ',\n",
+       " '。\\t記号,句点,*,*,*,*,。,。,。']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[str(w) for w in data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -1070,20 +1104,49 @@
        " ...]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[str(w) for w in words]"
+    "[str(w) for w in jap.words()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "a=data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import janome as ja"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<janome.lattice.NodeType at 0x11d784cf8>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
@@ -1106,7 +1169,7 @@
    "version": "3.6.5"
   },
   "toc": {
-   "base_numbering": 1,
+   "base_numbering": 1.0,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
