--- a/CH3.ipynb
+++ b/CH3.ipynb
@@ -13,12 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from  snippets.reader  import *"
+    "from  reader  import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "['kokoro.txt']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,36 +1124,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snippets.transform  import *"
+    "import janome as ja"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "japtrans=JapaneseTextNormalizer()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "japtrans.transform(jap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<janome.lattice.NodeType at 0x11d784cf8>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
@@ -1176,7 +1169,7 @@
    "version": "3.6.5"
   },
   "toc": {
-   "base_numbering": 1,
+   "base_numbering": 1.0,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
