教師あり学習で太宰と夏目を見分けさせる

--- a/CH3.ipynb
+++ b/CH3.ipynb
@@ -129,13 +129,13 @@
     {
      "ename": "NameError",
      "evalue": "name 'JapaneseTextNormalizer' is not defined",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;31m-------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m             Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-6-4b1446691726>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjap_trans\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mJapaneseTextNormalizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtraned\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjap_trans\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorpus\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'JapaneseTextNormalizer' is not defined"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -223,43 +223,39 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "reduce() of empty sequence with no initial value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-1b4d9058ff9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvecs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvec\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvecs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-3-1b4d9058ff9e>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvecs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvec\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvecs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Develop/project/DIUnit/pycoon/snippets/transform.py\u001b[0m in \u001b[0;36mtransform\u001b[0;34m(self, sents)\u001b[0m\n\u001b[1;32m     86\u001b[0m             \u001b[0mwordvecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_word2vec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msent\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m             \u001b[0mwordvecs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mvec\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mwordvecs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m             \u001b[0msentvec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mreduce\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwordvecs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m             \u001b[0;32myield\u001b[0m \u001b[0msentvec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: reduce() of empty sequence with no initial value"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vecs=[vec for vec in vecs]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<generator object GensimVectorizer.transform at 0x124696f68>"
+       "array([ 0.04665842,  0.06240005,  0.08904613, -0.04003966,  0.0588038 ,\n",
+       "        0.03230398,  0.03100826, -0.08072286, -0.09102268, -0.09873834,\n",
+       "        0.06709723,  0.02657022, -0.06401249,  0.06854478, -0.11991413,\n",
+       "        0.0203349 , -0.15181446,  0.01628551, -0.06633512,  0.03069518,\n",
+       "        0.00346872, -0.02377115,  0.01053918, -0.05669406, -0.04211437,\n",
+       "       -0.09280998,  0.0072185 ,  0.03742616,  0.0449289 ,  0.02402251,\n",
+       "       -0.04321304,  0.0419749 , -0.02368107, -0.05771204, -0.01074457,\n",
+       "        0.03834247, -0.00770425,  0.06353041,  0.04824188, -0.09876865,\n",
+       "       -0.00092404,  0.09987713,  0.02532976,  0.04575653, -0.01014339,\n",
+       "        0.00446079,  0.05385602, -0.08168311, -0.01173535,  0.12506697],\n",
+       "      dtype=float32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vecs"
+    "vecs[]"
    ]
   },
   {
@@ -358,7 +354,7 @@
    "version": "3.6.5"
   },
   "toc": {
-   "base_numbering": 1,
+   "base_numbering": 1.0,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
