14章の内容を追加

--- a/Chapter 14. Trees and Forests.ipynb
+++ b/Chapter 14. Trees and Forests.ipynb
@@ -100,7 +100,7 @@
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -152,6 +152,180 @@
     "# 特徴量名の追加\n",
     "plt.xticks(range(features.shape[1]),names,rotation=75)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ランダムフォレストの中で、一番効いている特徴量を取得"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 44.7 ms, sys: 529 µs, total: 45.2 ms\n",
+      "Wall time: 64.7 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import  RandomForestClassifier\n",
+    "from sklearn import  datasets\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "\n",
+    "iris=datasets.load_iris()\n",
+    "features=iris.data\n",
+    "target=iris.target\n",
+    "\n",
+    "randomforest=RandomForestClassifier(random_state=0,n_jobs=1)\n",
+    "\n",
+    " # 重要度の閾値を指定し、それ以上の特徴量のみを抽出\n",
+    "selector=SelectFromModel(randomforest,threshold=0.3)\n",
+    "\n",
+    "features_important=selector.fit_transform(features,target)\n",
+    "\n",
+    "# 重要な特徴量のみで学習\n",
+    "% time model=randomforest.fit(features_important,target)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.1, 3.5, 1.4, 0.2],\n",
+       "       [4.9, 3. , 1.4, 0.2],\n",
+       "       [4.7, 3.2, 1.3, 0.2]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.4, 0.2],\n",
+       "       [1.4, 0.2],\n",
+       "       [1.3, 0.2]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_important[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# in-balanceなデータから比率をデータを公平に取得"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn import datasets\n",
+    "\n",
+    "iris=datasets.load_iris()\n",
+    "features=iris.data\n",
+    "target=iris.target\n",
+    "\n",
+    "# in-balanceなデータ\n",
+    "features = features[40:,:]\n",
+    "target = target[40:]\n",
+    "\n",
+    "# 二項分類に変換\n",
+    "target=np.where(target==0,0,1)\n",
+    "\n",
+    "randomeforest=RandomForestClassifier(random_state=0,class_weight='balanced')\n",
+    "\n",
+    "model=randomeforest.fit(features,target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 決定木の構造をコントロールしたい"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- max_depth\n",
+    "木の深さ\n",
+    "\n",
+    "- min_samples_split\n",
+    "nodeが分かれる前に使用される最小のデータセットの量\n",
+    "\n",
+    "- min_samples_leaf\n",
+    "葉に辿り着く前の最小のデータセットの量\n",
+    "\n",
+    "- max_leaf_nodes\n",
+    "最大の葉の数\n",
+    "\n",
+    "- min_impurity_split\n",
+    "nodeが分かれる前に判定される最小の不純度\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Boostingによりランダムフォレストや決定木の性能を良くしたい"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn import datasets\n",
+    "\n",
+    "# Load data\n",
+    "iris = datasets.load_iris()\n",
+    "features = iris.data\n",
+    "target = iris.target\n",
+    "\n",
+    "# OOB詳細はこちら\n",
+    "# https://qiita.com/kenmatsu4/items/1152d6e5634921d9246e\n",
+    "adaboost=AdaBoostClassifier(random_state=0)\n",
+    "model=adaboost.fit(features,target)"
+   ]
   }
  ],
  "metadata": {
@@ -184,6 +358,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
