--- a/Qiitaアドベント5日目.ipynb
+++ b/Qiitaアドベント5日目.ipynb
@@ -262,16 +262,17 @@
     "            tweet=search_result['text']\n",
     "            tweets.append(tweet)           \n",
     "            yield tweet\n",
+    "            \n",
     "        index+=1 \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweet_meiji_war=twitter_gen('たけのこ派 きのこ派')"
+    "tweet_pkGO=twitter_gen('pokemon GO')"
    ]
   },
   {
@@ -283,21 +284,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 195,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "笹谷「卒業シーズンとかさ、『いっぱい喧嘩もしたけど、だからこそ今がある』みたいなキャッチコピーよく聞くよな」茂庭「鎌ちはよく二口に突っかかってるし、当てはまるんじゃない？」鎌先「この間はきのこ派たけのこ派で戦争したけど」茂庭「あーそれだめなやつだわ」笹谷「つか戦争って…」\n"
+      "RT @Pokemon: Every adventure needs a 🔥 soundtrack. \n",
+      "\n",
+      "Keep the beat going long after your Kanto adventure ends with the Pokémon: Let’s Go, P…\n"
      ]
     }
    ],
    "source": [
-    "print(next(tweet_meiji_war))"
+    "print(next(tweet_pkGO))"
    ]
   },
   {
