Qiitaの記事直して、itertoolについて諸々試してみた

--- a/Qiita記事_scipyによる、高速かつ省メモリなダミー化.ipynb
+++ b/Qiita記事_scipyによる、高速かつ省メモリなダミー化.ipynb
@@ -356,13 +356,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ちなみに、`get_dummies`のオプションに`sparse`がありますが、これはTODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# パフォーマンス"
    ]
   },
@@ -413,7 +406,7 @@
    "cell_type": "code",
    "execution_count": 97,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -710,6 +703,108 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist=np.random.rand()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.55769951, 0.33657123],\n",
+       "       [0.45133011, 0.2789067 ],\n",
+       "       [0.50104486, 0.0466694 ],\n",
+       "       [0.82246099, 0.31585821],\n",
+       "       [0.73246399, 0.40975698],\n",
+       "       [0.45640806, 0.47895361],\n",
+       "       [0.00591605, 0.68231773],\n",
+       "       [0.46736764, 0.86555798],\n",
+       "       [0.56427689, 0.5840203 ],\n",
+       "       [0.05885119, 0.28730723]])"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 1, 2)"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist[:,np.newaxis,:].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 10, 2)"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "dist[np.newaxis,:,:].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-131-05bd554adca3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": []
   }
  ],
